feat: grid of items in category page

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ body {
   padding: 5rem 10rem 2rem 10rem;
 }
 
+.category-content {
+  padding: 2rem 8rem 2rem 10rem;
+}
+
 .hero {
   display: flex;
   align-items: center;
@@ -222,11 +226,6 @@ img {
   margin: 0rem 10rem;
 }
 
-.card {
-  width: calc(50% - 1rem);
-  padding-bottom: 3rem;
-}
-
 .about {
   width: calc(50%);
   margin-left: 3rem;
@@ -237,7 +236,16 @@ a {
   font-size: 1.1rem;
 }
 
+.card {
+  width: 20rem;
+  margin: 0.5rem;
+  margin-bottom: 2rem;
+  box-sizing: border-box;
+  position: relative;
+}
+
 .card-image {
+  width: 18rem;
   border-radius: 10px;
   transition: all 0.3s ease;
 }
@@ -249,6 +257,18 @@ a {
 
 .card-desc {
   padding-top: 10px;
+  width: 20rem;
+}
+@media (max-width: 768px) {
+  .card {
+    width: calc(50% - 2rem); /* two items per row on smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    width: calc(100% - 2rem); /* one item per row on very small screens */
+  }
 }
 
 .footer-links {
