--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,15 @@ https://gomakethings.com/full-width-images-with-only-css/ */
   border-radius: 12px;
 }
 
+.left {
+  position: absolute;
+  top: 50%;
+  left: 25%; /* Align to the left */
+  transform: translate(-50%, -50%);
+  padding: 0rem 6rem 2rem 6rem;
+  border-radius: 12px;
+}
+
 .selected-work {
   padding: 5rem 0;
 }
@@ -365,4 +374,16 @@ a {
     opacity: 1;
     transform: translateY(0px);
   }
+}
+
+.artist-container button {
+  float: left;
+  padding: 7px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: rgb(238, 238, 238);
+  font-size: 0.9rem;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
 }
