--- a/artists_corner_0/frontend/web.mql.todo/src/styles/home.css
+++ b/artists_corner_0/frontend/web.mql.todo/src/styles/home.css
@@ -180,6 +180,7 @@ https://gomakethings.com/full-width-images-with-only-css/ */
 
 .header .search-container button {
   float: right;
+  width: 100px;
   padding: 7px 10px;
   margin-top: 8px;
   margin-right: 16px;
@@ -222,10 +223,10 @@ https://gomakethings.com/full-width-images-with-only-css/ */
 .topnav a {
   font-family: "Space Grotesk", sans-serif !important;
   color: #303030;
-  margin-right: 2rem;
-  font-size: 0.9rem;
+  margin-right: 10rem;
+  font-size: 1.1rem;
   text-decoration: none;
-  display: inline-block;
+  display:inline-block;
   transition: all 0.3s ease;
   color: #333333;
 }
@@ -318,7 +319,7 @@ a {
 .footer-links {
   display: flex;
   justify-content: center;
-  padding: 0rem 10rem 1rem 10rem;
+  padding: 1rem 10rem 1rem 10rem;
 }
 
 .footer-links a {
@@ -339,7 +340,7 @@ a {
 .footer {
   display: flex;
   justify-content: center;
-  padding: 0rem 10rem 3rem 10rem;
+  padding: 2rem 10rem 3rem 10rem;
 }
 
 .animated {
