--- a/artists_corner_0/frontend/web.mql.todo/src/styles/category.css
+++ b/artists_corner_0/frontend/web.mql.todo/src/styles/category.css
@@ -86,3 +86,9 @@ h1 {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
 }
+
+
+.sort-dropdown select:focus {
+  outline: none; /* Remove default focus outline */
+  border: 0px solid; /* Set the border when focused */
+}
